spotify loginn backend

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DATABASE_URL=postgresql+psycopg://postgres:1234@localhost:5432/spoti_insights
+SPOTIFY_CLIENT_ID=fbc84e8fc3ac416ca11fec6f9905a40a
+SPOTIFY_CLIENT_SECRET=916638fcaa4c430ba08660204d0eaef7
+SPOTIFY_REDIRECT_URI=http://127.0.0.1:8000/auth/spotify/callback 
